# dotfiles

./: .gitignore  Memo.md  README.md  checklist.sh  setup.sh
fish/: config.fish
fish/.config/fish/: config.fish
fish/conf.d/: brew-env.fish  env.fish
ghostty/: config
helix/: config.toml
micro/.config/micro/: settings.json
nvim/: init.lua  nvim-pack-lock.json
nvim-lazyvim/: hotkeys.md  lazy-lock.json  nvim-pack-lock.json
nvim-lazyvim/lua/config/: autocmds.lua  keymaps.lua  lazy.lua  options.lua
nvim-lazyvim/lua/plugins/: fzf.lua  (+17 more)
nvim/lua/: theme.lua
opencode/: opencode.json
starship/.config/: starship.toml
sublime/: settings.json
templates/: .clang-format  .golangci.yml  Makefile  Makefile-Cpp  Makefile-Go  Memo.md  extensions.json  go.mod  launch.json  main.go  pyproject.toml  setting.json  settings.json  template_cpp.code-snippets  template_go.code-snippets  vscode-setting.json
templates/Environment/: LeetCode.hpp  debug.h  pyproject.toml
templates/Makefile/: Makefile-Cpp  Makefile-Go
templates/Snippets/: template_cpp.code-snippets  template_go.code-snippets  template_python.code-snippets
templates/VScode/: settings.json
templates/cpp-cmake-env/: .clang-format  .clangd  CMakeLists.txt  Makefile
templates/cpp-cmake-env/include/bits/: stdc++.h
templates/cpp-make-env/: Makefile
templates/go-env/: .golangci.yml  AGENTS.md  Makefile
templates/headers/: debug.h
templates/middleware/: log.go
templates/vscode-env/: setting.json
tmux/: .tmux.conf
vim/: .vimrc
yazi/: yazi.toml
zsh/: .zprofile  .zshrc  brew-env.zsh  yazi.zsh
(+63 files in other folders)
